@@ -31,7 +31,7 @@
 <h2>Installation</h2>
 <p>Just download the <a href="http://prdownloads.sourceforge.net/winmerge/WinMerge-2.4.10-Setup.exe">installer</a> and double-click it.</p>
 <p>Or you may simply unzip the <a href="http://prdownloads.sourceforge.net/winmerge/WinMerge-2.4.10-exe.zip">binary zip package</a> into the desired location, and run
-<code>WinMerge.exe</code> or <code>WinMergeU.exe</code> (the latter is the Unicode version, only for use on NT/2000/XP).</p>
+<code>WinMergeU.exe</code> (except for Windows 98/ME users who should use <code>WinMerge.exe</code>).</p>
 <p>For more information, please see the <a href="manual/installing.html">Installation section</a> of the <a href="manual/index.html">Manual</a>.</p>
 
 <h2>Using WinMerge</h2>
@@ -45,7 +45,7 @@ As such, your main form of support for WinMerge will be through
 subscription to the <a href="http://lists.sourceforge.net/lists/listinfo/winmerge-support">WinMerge-support mailing list</a>.
 In addition, SourceForge has bug tracking capabilities, so please report any
 bugs <a href="http://sourceforge.net/bugs/?group_id=13216">here</a>. Wish list items on the
-<a href="http://sourceforge.net/tracker/?group_id=13216&amp;atid=363216">RFE list</a> will also be considered, but we make
+<a href="http://sourceforge.net/tracker/?group_id=13216&amp;atid=363216">feature request list</a> will also be considered, but we make
 absolutely no promises.</p>
 <p>We prefer that you <a href="http://sourceforge.net/account/newuser_emailverify.php">register</a>
 with <a href="http://sourceforge.net/">SourceForge</a> before posting a bug report (registration is
