@@ -1,3 +1,10 @@
+2006-09-14 Tim
+ PATCH: [ 1558862 ] Web: Tidying web-pages (Part 1)
+  Web: index.php
+  Web\2.4: index.php
+  Web\2.2: index.php
+  Web\2.0: index.php
+
 2006-09-12 Tim
  PATCH: [ 1557373 ] Japanese and Swedish translations are ready for 2.6
   Web\developer\l10n: status.php status.xml
